<resources>
    <string name="app_name">project276</string>
    <string name="royal_shop">Royal Shop</string>
    <string name="tina_anderson">Tina Anderson</string>
    <string name="search_coffees">Search coffees…</string>
    <string name="category">Category</string>
    <string name="profile">Profile</string>
    <string name="my_order">My order</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="explorer">Explorer</string>
    <string name="back">Back</string>
    <string name="coffee_size">Coffee size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="qty">Qty.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="delivery">Delivery</string>
    <string name="enter_your_discount_code">Enter your discount code</string>
    <string name="apply">Apply</string>
    <string name="total_tax">Total Tax</string>
    <string name="total">Total</string>
    <string name="procced_to_checkout">Procced to checkout</string>
</resources>